--- a/notebooks/forecast/run_experiments.ipynb
+++ b/notebooks/forecast/run_experiments.ipynb
@@ -5,7 +5,15 @@
    "execution_count": 1,
    "id": "a0e3207e-b709-4b59-93ca-323053f2f9f8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO: Carregadas 6 arquiteturas e 5 perfis de hiperparâmetros.\n"
+     ]
+    }
+   ],
    "source": [
     "# %%capture capturado\n",
     "%matplotlib widget\n",
